# fetchit

./: .gitignore  example.ipynb  install.sh  pyproject.toml  secrets-example.json
configs/: default.json
docker/: Dockerfile.basic  compose.basic.yml
lightrag/: lightrag.py  llm.py  operate.py  prompt.py  storage.py
lightrag/kg/: milvus_impl.py  mongo_impl.py
utils/: parsers.py
utils/config/: __init__.py  config.py  mapping.py
